--- a/social-proof-section-master/scss/_responsive.scss
+++ b/social-proof-section-master/scss/_responsive.scss
@@ -15,7 +15,7 @@
       content: '';
       width: 42%;
       height: 100%;
-      background: url(/dist/images/bg-pattern-top-desktop.svg);
+      background: url(../dist/images/bg-pattern-top-desktop.svg);
       background-size: contain;
       background-repeat: no-repeat;
       top: 0;
@@ -28,7 +28,7 @@
       content: '';
       width: 80%;
       height: 80%;
-      background: url(/dist/images/bg-pattern-bottom-desktop.svg);
+      background: url(../dist/images/bg-pattern-bottom-desktop.svg);
       background-size: cover;
       background-repeat: no-repeat;
       bottom: 0;
