--- a/loopstudios-landing-page-main/style.css
+++ b/loopstudios-landing-page-main/style.css
@@ -477,10 +477,31 @@ img {
     margin-bottom: 0;
   }
 
+  .footer-links a {
+    position: relative;
+  }
+
+  .footer-links a:hover::after {
+    content: '';
+    position: absolute;
+    bottom: -40%;
+    left: 50%;
+    transform: translateX(-40%);
+    height: 3px;
+    width: 40%;
+    background-color: white;
+    transition: var(--transition);
+  }
+
   .footer-social {
     justify-content: flex-end;
     gap: 1.5rem;
     margin: 0 0 1rem;
+  }
+
+  .footer-social a:hover {
+    border-bottom: 2px solid white;
+    padding-bottom: 0.25rem;
   }
 
   .footer-copyright {
