--- a/loopstudios-landing-page-main/style.css
+++ b/loopstudios-landing-page-main/style.css
@@ -197,7 +197,7 @@ img {
   font-size: 2.5rem;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 376px) {
   .header {
     position: relative;
     background-image: url(./images/desktop/image-hero.jpg);
@@ -205,7 +205,7 @@ img {
     background-color: black;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 60vh;
+    height: 100vh;
     z-index: 1;
   }
 
@@ -229,11 +229,7 @@ img {
 
 @media screen and (min-width: 1024px) {
   .header {
-    height: 50vh;
-  }
-
-  .header {
-    height: 50vh;
+    height: 80vh;
   }
 
   .header .hero {
@@ -279,7 +275,7 @@ img {
   }
 }
 
-@media screen and (min-width: 1100px) {
+@media screen and (min-width: 1200px) {
   .header {
     height: unset;
     padding-bottom: 10rem;
@@ -325,17 +321,17 @@ img {
 /* interactive Desktop */
 @media screen and (min-width: 1100px) {
   .interactive {
-    padding: 8rem 0 0;
+    padding: 9.5rem 0 0;
     display: grid;
-    grid-template-columns: 60% 40%;
+    grid-template-columns: 65% 35%;
   }
 
   .interactive-content {
     text-align: left;
     background: white;
-    padding: 5rem 0 5rem 5rem;
-    margin-top: 30%;
-    margin-left: -25%;
+    padding: 4.5rem 0 4.5rem 4.5rem;
+    margin-top: 40%;
+    margin-left: -40%;
   }
 
   .interactive-content p {
@@ -406,7 +402,7 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.2);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.9));
     z-index: 2;
   }
 
