--- a/insure-landing-page-master/css/menu.css
+++ b/insure-landing-page-master/css/menu.css
@@ -2,7 +2,7 @@
 
 header {
     background-color: var(--Very-Light-Gray);;
-    height: 5rem;
+    padding: 1.25rem 0;
     width: 100%;
     position: fixed;
     z-index: 2;
@@ -111,7 +111,7 @@ header .hamburger.show .close {
 @media (min-width: 1000px) {
     header {
         position: relative;
-        height: 6rem;
+        padding:1.25rem 0;
     }
 
     
