--- a/3-column-preview-card-component-main/index.css
+++ b/3-column-preview-card-component-main/index.css
@@ -51,6 +51,7 @@ p {
 
    p {
       margin-bottom: 5rem;
+      font-size: 0.925rem;
    }
 }
 
@@ -77,7 +78,8 @@ img {
 
 @media screen and (min-width: 1200px) {
    .container {
-      width: 70%;
+      width: 65%;
+      max-width: 1440px;
    }
 }
 
@@ -85,7 +87,7 @@ img {
    min-height: 100vh;
    display: flex;
    align-items: center;
-   justify-items: center;
+   justify-content: center;
    padding: 5rem 0;
 }
 
@@ -104,7 +106,7 @@ img {
       grid-template-columns: repeat(3, 1fr);
    }
    .card {
-      padding: 3.5rem;
+      padding: 3.25rem;
    }
 }
 
