--- a/insure-landing-page-master/css/menu.css
+++ b/insure-landing-page-master/css/menu.css
@@ -1,191 +1,194 @@
 /* Header */
 
 header {
-    background-color: var(--Very-Light-Gray);;
-    padding: 1.25rem 0;
-    width: 100%;
-    position: fixed;
-    z-index: 2;
+   background-color: var(--Very-Light-Gray);
+   height: 5rem;
+   width: 100%;
+   position: fixed;
+   z-index: 2;
 }
 
 header .wrapper {
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-    align-items: center;
-    grid-template-areas: 
-    "logo ham"
-    "list list";
-    padding: 1rem 0;
+   display: grid;
+   grid-template-columns: 3fr 1fr;
+   align-items: center;
+   grid-template-areas:
+      "logo ham"
+      "list list";
+   padding: 1rem 0;
 }
 
 .header-logo {
-    width: 125px;
-    align-self: center;
-    grid-area: logo;
+   width: 125px;
+   align-self: center;
+   grid-area: logo;
 }
 
 .hamburger {
-    grid-area: ham;
-    align-self: center;
-    justify-self: end;
-    height: 100%;
-    padding: 0.5rem;
+   grid-area: ham;
+   align-self: center;
+   justify-self: end;
+   height: 100%;
+   padding: 0.5rem;
 }
 
 #mobile {
-    grid-area: list;
+   grid-area: list;
 }
 
 header #mobile ul {
-    position: relative;
-    transform: scale(0);
-    transition: all ease-in-out 0.5s;
-    text-align: center;
-    z-index: 1;
+   position: relative;
+   opacity: 0;
+   transform: translateY(-100vh);
+   transition: all ease-in-out 0.5s;
+   text-align: center;
+   z-index: 1;
 }
 
+header #mobile::after {
+   content: "";
+   background-color: var(--Very-Dark-Violet);
+   background-image: url(/images/bg-pattern-mobile-nav.svg);
+   background-size: contain;
+   background-repeat: no-repeat;
+   background-position: bottom;
+   position: absolute;
+   width: 100%;
+   height: 100vh;
+   transition: all 0.3s ease;
+   opacity: 0;
+}
 
 header #mobile.show {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    height: 100vh;
-    width: 100vw;
-    top: 5rem;
-    left: 0;
-    align-items: center;
+   display: flex;
+   flex-direction: column;
+   position: fixed;
+   height: 100vh;
+   width: 100vw;
+   top: 5rem;
+   left: 0;
+   align-items: center;
+   transition: all 0.3s ease;
 }
 
-
 header #mobile.show::after {
-    content:'';
-    background-color: var(--Very-Dark-Violet);
-    background-image: url(/images/bg-pattern-mobile-nav.svg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom;
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    
+   opacity: 1;
 }
 
 header #mobile.show ul {
-    margin: 1rem 0;
-    transform: scale(1);
-    transition: all ease-in-out 0.5s;
-    z-index: 1;
+   opacity: 1;
+   transform: translateY(0);
+   margin: 1rem 0;
+   transition: all ease-in-out 0.5s;
+   z-index: 1;
 }
 
 header #mobile.show .header-btn {
-    display: block;
-    width: 100%;
+   display: block;
+   width: 100%;
 }
 
-
 nav ul a {
-    color: var(--Very-Light-Gray);
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    margin: 3rem 0;
-    font-size: 1rem;
-    font-weight: 700;
+   color: var(--Very-Light-Gray);
+   text-transform: uppercase;
+   letter-spacing: 2px;
+   margin: 3rem 0;
+   font-size: 1rem;
+   font-weight: 700;
 }
 
 .header-btn {
-    display: block;
+   display: block;
 }
 
 header .hamburger .close {
-    display: none;
+   display: none;
 }
 
 header .hamburger.show .open {
-    display: none;
+   display: none;
 }
 
 header .hamburger.show .close {
-    display: block;
+   display: block;
 }
 
 @media (min-width: 1000px) {
-    header {
-        position: relative;
-        padding:1.25rem 0;
-    }
+   header {
+      position: relative;
+      height: 6rem;
+      padding-top: 1rem;
+   }
 
-    
-    header #mobile.show {
-        display: none
-    }
+   header #mobile.show {
+      display: none;
+   }
 
-    header #mobile.show::after {
-        display: none;
-    }
-    
-    header #mobile.show ul {
-        display: none;
-    }
-    
+   header #mobile.show::after {
+      display: none;
+   }
 
-    header .wrapper {
-        display: grid;
-        grid-template-columns: 1fr 8fr;
-        grid-template-areas: "logo list";
-        align-items: center;
-        justify-items: center;
-    }
+   header #mobile.show ul {
+      display: none;
+   }
 
-    .header-logo {
-        grid-area: logo;
-        justify-self: center;
-        align-self: center;
-    }
+   header .wrapper {
+      display: grid;
+      grid-template-columns: 1fr 8fr;
+      grid-template-areas: "logo list";
+      align-items: center;
+      justify-items: center;
+   }
 
-    .menu-nav {
-        grid-area: list;
-        justify-self: end;
-    }
-    
+   .header-logo {
+      grid-area: logo;
+      justify-self: center;
+      align-self: center;
+   }
 
-    header #mobile ul {
-        transform: scale(1);
-        transform: translateY(0);
-        transition: none;
-        text-align: center;
-        align-self: center;
-        z-index: 1;
-    }
+   .menu-nav {
+      grid-area: list;
+      justify-self: end;
+   }
 
-    nav ul a {
-        color: var(--Dark-Violet);
-        margin: 0;
-        font-size: 1rem;
-        font-weight: 700;
-        margin: 0 0 0 2rem;
-    }
+   header #mobile ul {
+      transform: scale(1);
+      transform: translateY(0);
+      transition: none;
+      text-align: center;
+      align-self: center;
+      z-index: 1;
+   }
 
-    .menu-list li {
-        display: inline-block;
-    }
+   nav ul a {
+      color: var(--Dark-Violet);
+      margin: 0;
+      font-size: 1rem;
+      font-weight: 700;
+      margin: 0 0 0 2rem;
+   }
 
-    .menu-list a:hover,
-    .menu-list a:active {
-        font-weight: 700;
-    }
+   .menu-list li {
+      display: inline-block;
+   }
 
-    .header-btn {
-        color: var(--Dark-Violet);
-        border: var(--Very-Dark-Violet) 2px solid;
-        font-weight: 700;
-    }
+   .menu-list a:hover,
+   .menu-list a:active {
+      font-weight: 700;
+   }
 
-    .header-btn:hover {
-        background: var(--Very-Dark-Violet);
-        color: var(--Very-Light-Gray);
-    }
+   .header-btn {
+      color: var(--Dark-Violet);
+      border: var(--Very-Dark-Violet) 2px solid;
+      font-weight: 700;
+   }
 
-    .hamburger {
-        display: none;
-    }
+   .header-btn:hover {
+      background: var(--Very-Dark-Violet);
+      color: var(--Very-Light-Gray);
+   }
+
+   .hamburger {
+      display: none;
+   }
 }
